Set styles for pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,12 @@
 
 /* Containers */
 
+body {
+	margin-top: 2em;
+	margin-bottom: 2em;
+	background-color: #191414;
+}
+
 #login {
 	display: flex;
 	align-items: center;
@@ -16,13 +22,13 @@
 .header {
 	display: flex;
 	justify-content: center;
-	border-bottom: 1px solid #d9dadc;
 	width: 100%;
 	padding: 25px 0 10px;
 	margin-bottom: 30px;
 }
 
 #list-container {
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -31,7 +37,7 @@
 /*	Log in view */
 
 .spotify-logo {
-	background-image: url(../icons/Spotify_Logo_RGB_Black.png);
+	background-image: url(../icons/Spotify_Logo_RGB_Green.png);
 	background-repeat: no-repeat;
 	background-size: 100%;
 	width: 100%;
@@ -42,7 +48,7 @@
 
 h1 {
 	font-size: 18px;
-	color: #222326;
+	color: white;
 	font-weight: 900;
 	line-height: 1.1;
 	font-family: sans-serif;
@@ -73,7 +79,112 @@ h1 {
 
 /* Home view */
 
+.item img {
+	width: 300px;
+	height: 300px;
+	display: inline-block;
+	border-radius: 3px;
+}
+
+.item {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 1em;
+	padding: 1em 1em 1em 1em;
+	background-color: #191919;
+	width: 25em;
+	border-radius: 3px;
+}
+
+.item:hover {
+	background-color: #282828;
+}
+
+.item h2 {
+	color: white;
+	font-size: 16px;
+	padding-bottom: 0.5em;
+	padding-top: 1em;
+	align-self: flex-start;
+	margin-left: 3.1em;
+	font-weight: 700;
+	line-height: 24px;
+	font-family: 'Helvetica Neue';
+}
+
+.item p {
+	font-size: 16px;
+	color: white;
+	font-family: 'Helvetica Neue';
+	font-weight: 300;
+	align-self: flex-start;
+	margin-left: 3.1em;
+	opacity: 0.9;
+}
+
+.play-button {
+	visibility: hidden;
+	position: absolute;
+	bottom: 95px;
+	left: 300px;
+	display: inline-block;
+	width: 3em;
+	height: 3em;
+	background-color: #1db954;
+	border-radius: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.item .play-icon {
+	margin-left: 0.3em;
+	position: relative;
+	width: 1em;
+	height: 1em;
+	clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+	background-color: #ffffff;
+	display: inline-block;
+	transform: rotate(90deg);
+}
+
+.item:hover span {
+	visibility: visible;
+}
+
 /* Detail view */
+
+#tracks-container {
+	width: 100%;
+	height: 100%;
+}
+
+#tracks-list {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+ul {
+	position: relative;
+	height: 100vh;
+	list-style-type: decimal;
+}
+
+li {
+	margin-bottom: 1em;
+	width: 20em;
+	color: #ffffff;
+	font-size: 16px;
+	font-family: 'Helvetica Neue';
+	padding-left: 0.5em;
+}
+
+.row {
+	color: #ffffff;
+}
 
 /*	Active classes */
 
