--- a/css/styles.css
+++ b/css/styles.css
@@ -225,3 +225,27 @@ h1 {
 .toggle {
 	display: none !important;
 }
+
+.loader-on {
+	display: inline-block;
+}
+
+.loader-off {
+	display: none;
+}
+
+#loader span {
+	display: inline-block;
+	width: 4em;
+	height: 4em;
+	background-color: red;
+	border-radius: 30px;
+}
+
+#loader {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-top: -50px;
+	margin-left: -100px;
+}
