--- a/css/styles.css
+++ b/css/styles.css
@@ -236,9 +236,10 @@ h1 {
 
 #loader span {
 	display: inline-block;
-	width: 4em;
-	height: 4em;
-	background-color: red;
+	margin-right: 1em;
+	width: 3em;
+	height: 3em;
+	background-color: #1db954;
 	border-radius: 30px;
 }
 
@@ -248,4 +249,31 @@ h1 {
 	left: 50%;
 	margin-top: -50px;
 	margin-left: -100px;
+}
+
+#loader span:first-child {
+	animation-name: loaderAnimation;
+	animation-duration: 0.4s;
+	animation-timing-function: ease;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+}
+
+#loader span:nth-child(2) {
+	animation: loaderAnimation 0.4s ease 0.2s infinite alternate;
+}
+
+#loader span:nth-child(3) {
+	animation: loaderAnimation 0.4s ease 0.4s infinite alternate;
+}
+
+@keyframes loaderAnimation {
+	from {
+		opacity: 0;
+		transform: scale(1.2);
+	}
+	to {
+		opacity: 1;
+		transform: scale(0.75);
+	}
 }
